# agno-agent-workspace

./: pyproject.toml  requirements.txt
agents/: __init__.py  article_scraper.py  operator.py  sage.py  scholar.py  searcher.py  settings.py  writer.py
api/routes/: agents.py  playground.py  teams.py  v1_router.py  workflows.py
app_settings/: settings.py
models/: __init__.py  blog_post_models.py
prompts/agents/: finance.yaml  sage.yaml  scholar.yaml  web_agent.yaml
prompts/teams/: finance_agent.yaml  finance_researcher.yaml
scripts/: entrypoint.sh
teams/: finance_researcher.py  multi_language.py  settings.py
tests/: test_prompt_loader.py
ui/: utils.py
utils/: base_agent.py  model_factory.py  prompt_loader.py
workflows/: blog_post_generator.py  investment_report_generator.py  operator.py  run_blog_generator.py  settings.py
workspace/: dev_resources.py  prd_resources.py
