[project]
name = "agent-app"
version = "0.1.0"
description = "Agent application framework for AI workflows"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{ name = "Agno", email = "hello@agno.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

dependencies = [
  "agno[aws]==1.5.5",
  "alembic>=1.16.0",
  "jinja2==3.1.6",
  "pyyaml==6.0.2",
  "beautifulsoup4>=4.13.0",
  "duckduckgo-search>=8.0.0",
  "exa_py>=1.15.0",
  "fastapi[standard]>=0.115.0",
  "nest_asyncio>=1.5.8",
  "openai>=1.100.0",
  "tiktoken==0.11.0",
  "pgvector>=0.4.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=6.0.0",
  "python-docx>=1.2.0",
  "sqlalchemy>=2.0.40",
  "streamlit>=1.48.0",
  "typer>=0.16.0",
  "yfinance>=0.2.60",
  "aiofiles>=24.1.0",
  "newspaper4k>=0.9.3",
  "lxml_html_clean>=0.4.0",
  "google-genai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0", 
    "pytest==8.4.1", 
    "ruff>=0.3.0", 
    "types-requests", 
    "types-beautifulsoup4",
    "pre-commit>=3.6.0",
    "black>=24.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "docs*"]

# Change this value to use a different directory for the agno workspace.
# [tool.agno]
# workspace = "workspace"

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
log_cli = true